--- a/auction.backend/src/main/resources/application.properties
+++ b/auction.backend/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=auction.backend
 # Database connection properties
 spring.datasource.url=jdbc:mysql://localhost:3306/ams_db
 spring.datasource.username=root
-spring.datasource.password=Dil@root123
+spring.datasource.password=Ab12345#
 spring.jpa.open-in-view=false
 spring.security.user.password=my_secure_password
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
