--- a/auction.backend/src/main/resources/application.properties
+++ b/auction.backend/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=Dil@root123
 spring.jpa.open-in-view=false
 spring.security.user.password=my_secure_password
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
