--- a/auction.backend/src/main/resources/application.properties
+++ b/auction.backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=auction.backend
-# Database connection properties
 spring.datasource.url=jdbc:mysql://localhost:3306/ams_db
 spring.datasource.username=root
 spring.datasource.password=Dil@root123
@@ -8,3 +7,9 @@ spring.security.user.password=my_secure_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.mvc.contentnegotiation.favor-path-extension=true
+spring.mvc.contentnegotiation.default-media-type=application/json
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
